--- a/src/Shopsys/ShopBundle/Resources/translations/validators.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/validators.cs.po
@@ -164,7 +164,7 @@ msgid "Please enter zip code"
 msgstr "Vyplň PSČ"
 
 msgid "Please select country"
-msgstr ""
+msgstr "Vyber stát"
 
 msgid "Pokud chcete informační řádek uživatelům zobrazit, musíte jej vyplnit"
 msgstr "Pokud chceš informační řádek uživatelům zobrazit, musíš ho vyplnit"
