Taken minimumAmount and amountMultiplier into consideration in cart form.

--- a/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
@@ -1753,6 +1753,9 @@ msgstr "Informace o produktu"
 msgid "Product no longer on sale"
 msgstr "Zboží se již neprodává"
 
+msgid "Product {{ name }} had to be removed from cart as its stock is too low"
+msgstr "Produkt {{ name }} musel být z košíku odstraněn, protože jeho skladové zásoby jsou příliš nízké"
+
 msgid "Product {{ name }} removed from cart"
 msgstr "Z košíku bylo odstraněno zboží {{ name }}"
 
