--- a/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
@@ -1951,6 +1951,9 @@ msgstr "Produkt <strong> {{product | productDisplayName}} </strong> geändert"
 msgid "Product no longer on sale"
 msgstr "Produkt nicht mehr im Verkauf"
 
+msgid "Product {{ name }} had to be removed from cart as its stock is too low"
+msgstr "Das Produkt {{ name }} muss aus dem Warenkorb entfernt werden, da der Lagerbestand zu niedrig ist"
+
 msgid "Product {{ name }} removed from cart"
 msgstr "Das Produkt {{name}} wurde aus dem Warenkorb entfernt"
 
