--- a/src/Shopsys/ShopBundle/Resources/translations/validators.sk.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/validators.sk.po
@@ -61,8 +61,8 @@ msgstr "Názov nesmie obsahovať viac ako {{limit}} znakov"
 msgid "Opening hours cannot be longer than {{ limit }} characters"
 msgstr "Otváracie hodiny nesmú byť dlhšie ako {{limit}} znakov"
 
-msgid "Password cannot be longer than {{ limit }} characters"
-msgstr "Heslo nesmie byť dlhšie ako {{limit}} znakov"
+msgid "Password must be longer than {{ limit }} characters"
+msgstr "Heslo musí mať minimálne {{ limit }} znakov"
 
 msgid "Password cannot be same as e-mail"
 msgstr "Heslo nemôže byť rovnaké ako e-mail"
