--- a/src/Shopsys/ShopBundle/Resources/translations/validators.en.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/validators.en.po
@@ -13,16 +13,22 @@ msgstr ""
 msgid "Email cannot be longer then {{ limit }} characters"
 msgstr ""
 
-msgid "First name cannot be longer then {{ limit }} characters"
+msgid "Externí ID nesmí být delší než {{ limit }} znaků"
 msgstr ""
 
-msgid "First name of contact person cannot be longer then {{ limit }} characters"
+msgid "First name cannot be longer then {{ limit }} characters"
 msgstr ""
 
 msgid "Google Maps link cannot be longer than {{ limit }} characters"
 msgstr ""
 
 msgid "Heading (H1) cannot be longer than {{ limit }} characters"
+msgstr ""
+
+msgid "Hodiny musí být v rozmezí od 0 do 23"
+msgstr ""
+
+msgid "Hodnota nemůže byt delší než {{ limit }} znaků"
 msgstr ""
 
 msgid "Identification number cannot be longer then {{ limit }} characters"
@@ -34,7 +40,13 @@ msgstr ""
 msgid "Last name cannot be longer than {{ limit }} characters"
 msgstr ""
 
-msgid "Last name of contact person cannot be longer than {{ limit }} characters"
+msgid "Minuty musí být v rozmezí od 0 do 59"
+msgstr ""
+
+msgid "Musíte vybrat dopravce"
+msgstr ""
+
+msgid "Musíte vybrat službu dopravce"
 msgstr ""
 
 msgid "Name cannot be longer than {{ limit }} characters"
@@ -58,6 +70,12 @@ msgstr ""
 msgid "Please choose a valid combination of transport and payment"
 msgstr ""
 
+msgid "Please choose advertisement type"
+msgstr ""
+
+msgid "Please choose article placement"
+msgstr ""
+
 msgid "Please choose country"
 msgstr ""
 
@@ -76,7 +94,13 @@ msgstr ""
 msgid "Please enter content"
 msgstr ""
 
+msgid "Please enter country of a store"
+msgstr ""
+
 msgid "Please enter date of creation"
+msgstr ""
+
+msgid "Please enter discount percentage"
 msgstr ""
 
 msgid "Please enter e-mail"
@@ -85,25 +109,13 @@ msgstr ""
 msgid "Please enter first name"
 msgstr ""
 
-msgid "Please enter first name of contact person"
-msgstr ""
-
-msgid "Please enter full name"
-msgstr ""
-
 msgid "Please enter identification number"
 msgstr ""
 
 msgid "Please enter last name"
 msgstr ""
 
-msgid "Please enter last name of contact person"
-msgstr ""
-
 msgid "Please enter name"
-msgstr ""
-
-msgid "Please enter name of a store"
 msgstr ""
 
 msgid "Please enter password"
@@ -133,13 +145,28 @@ msgstr ""
 msgid "Please enter zip code"
 msgstr ""
 
+msgid "Please select country"
+msgstr ""
+
+msgid "Pokud chcete informační řádek uživatelům zobrazit, musíte jej vyplnit"
+msgstr ""
+
 msgid "Position in list cannot be longer than {{ limit }} characters"
+msgstr ""
+
+msgid "Poznámka nesmí být delší než {{ limit }} znaků"
+msgstr ""
+
+msgid "Počet dnů do dodání musí být větší nebo roven nule"
 msgstr ""
 
 msgid "Price must be greater or equal to zero"
 msgstr ""
 
 msgid "Quantity must be greater than {{ compared_value }}"
+msgstr ""
+
+msgid "Region nesmí být delší než {{ limit }} znaků"
 msgstr ""
 
 msgid "Store name cannot be longer than {{ limit }} characters"
@@ -151,6 +178,12 @@ msgstr ""
 msgid "Tax number cannot be longer than {{ limit }} characters"
 msgstr ""
 
+msgid "Telefonní číslo musí být platné"
+msgstr ""
+
+msgid "Telefonní číslo musí začínat znakem +"
+msgstr ""
+
 msgid "Telephone number cannot be longer than {{ limit }} characters"
 msgstr ""
 
@@ -160,10 +193,55 @@ msgstr ""
 msgid "Uploaded image is to large ({{ size }} {{ suffix }}). Maximum size of an image is {{ limit }} {{ suffix }}."
 msgstr ""
 
+msgid "Vložené ID Youtube videa neobsahuje žádné video."
+msgstr ""
+
+msgid "Vyberte prosím pobočku"
+msgstr ""
+
+msgid "Vyplňte prosím SKU dárkového certifikátu."
+msgstr ""
+
+msgid "Vyplňte prosím deadline pro přijímání objednávek"
+msgstr ""
+
+msgid "Vyplňte prosím jméno"
+msgstr ""
+
+msgid "Vyplňte prosím množství."
+msgstr ""
+
+msgid "Vyplňte prosím nominální hodnotu dárkového certifikátu."
+msgstr ""
+
+msgid "Vyplňte prosím nominální hodnotu slevy."
+msgstr ""
+
+msgid "Vyplňte prosím počet dnů do dodání"
+msgstr ""
+
+msgid "Vyplňte prosím příjmení"
+msgstr ""
+
+msgid "Vyplňte prosím text tlačítka"
+msgstr ""
+
+msgid "Vyplňte, prosím, PSČ prodejny"
+msgstr ""
+
+msgid "Vyplňte, prosím, město prodejny"
+msgstr ""
+
+msgid "Vyplňte, prosím, název prodejny"
+msgstr ""
+
+msgid "Vyplňte, prosím, ulici prodejny"
+msgstr ""
+
 msgid "You have to agree with privacy policy"
 msgstr ""
 
-msgid "You have to agree with terms and conditions and privacy policy"
+msgid "Zadejte prosím celé číslo."
 msgstr ""
 
 msgid "Zip code cannot be longer than {{ limit }} characters"
